Fix dialog size on mobile devices

--- a/wcfsetup/install/files/style/ui/dialog.scss
+++ b/wcfsetup/install/files/style/ui/dialog.scss
@@ -463,8 +463,12 @@ html[data-color-scheme="dark"] .dialog::backdrop {
 
 @include screen-xs {
 	.dialog {
-		--dialog-max-height: calc(100% - 20px);
-		--dialog-max-width: calc(100% - 20px);
+		--dialog-max-height: calc(100vh - 20px);
+		--dialog-max-width: calc(100vw - 20px);
+		min-width: 0;
+	}
+
+	.dialog__document {
 		min-width: 0;
 	}
 }
